# ic-proj1

./: .gitignore  README.md  requirements.txt
bit_stream/src/: CMakeLists.txt
sndfile-example/: README  README.md
sndfile-example/src/: CMakeLists.txt  dct_dec.cpp  dct_enc.cpp  wav_cmp.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant_dec.cpp  wav_quant_enc.cpp  wav_to_mono.cpp
sndfile-example/test/: plot_hist.py  result.dct  result.qnt
